# ExpenseFlow

./: README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/app/core/: database.py  oauth2.py  security.py
backend/app/models/: category.py  expense.py  user.py
backend/app/routes/: auth.py  categories.py  dashboard.py  expenses.py  users.py
backend/app/schemas/: expense.py  user.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Footer.jsx  Hero.jsx  Navbar.jsx  Sidebar.jsx
frontend/src/layouts/: DashboardLayout.jsx
frontend/src/pages/: Categories.jsx  Dashboard.jsx  Expense.jsx  Home.jsx  Login.jsx  Signup.jsx
frontend/src/services/: api.js
init/postgres/: 01_schema.sql  02_seed.sql
